--- a/assets/font/icon/style.css
+++ b/assets/font/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icon';
-  src:  url('fonts/icon.eot?e5g2ed');
-  src:  url('fonts/icon.eot?e5g2ed#iefix') format('embedded-opentype'),
-    url('fonts/icon.ttf?e5g2ed') format('truetype'),
-    url('fonts/icon.woff?e5g2ed') format('woff'),
-    url('fonts/icon.svg?e5g2ed#icon') format('svg');
+  src:  url('fonts/icon.eot?ft4vz1');
+  src:  url('fonts/icon.eot?ft4vz1#iefix') format('embedded-opentype'),
+    url('fonts/icon.ttf?ft4vz1') format('truetype'),
+    url('fonts/icon.woff?ft4vz1') format('woff'),
+    url('fonts/icon.svg?ft4vz1#icon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
