--- a/assets/sass/fonts/_font-face.scss
+++ b/assets/sass/fonts/_font-face.scss
@@ -3,7 +3,7 @@
     font-family: "Roboto Regular";
     font-weight: 400;
     font-display: swap;
-    src: url("./../../font/Roboto/Roboto-Regular.ttf");
+    src: url("../font/Roboto/Roboto-Regular.ttf");
 }
 
 //Rubik Medium
@@ -11,5 +11,5 @@
     font-family: "Rubik Medium";
     font-weight: 500;
     font-display: swap;
-    src: url("./../../font/Rubik/static/Rubik-Medium.ttf");
+    src: url("../font/Rubik/static/Rubik-Medium.ttf");
 }
