--- a/assets/font/icon/style.scss
+++ b/assets/font/icon/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?e5g2ed');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?e5g2ed#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?e5g2ed') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?e5g2ed') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?e5g2ed##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?ft4vz1');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?ft4vz1#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?ft4vz1') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?ft4vz1') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?ft4vz1##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
