--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: BF Endodontia
-Text Domain: bfendodontia
+Theme Name: E-location
+Text Domain: E-location
 Version: 1.0.0
 Requires PHP: 7.4
-Description: Tema desenvolvido pela agência Goognet Solução Digital para a Clínica BF Endodontia
+Description: Tema desenvolvido pela agência Goognet Solução Digital para a empresa E-location
 Author: Thiago Marsola
 Author URI: https://github.com/thimarsola/
-Theme URI: https://bfendodontia.com.br
+Theme URI: https://elocation.com.br
 */
