--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,12 @@
   src: url("../font/Roboto/Roboto-Regular.ttf");
 }
 @font-face {
+  font-family: "Roboto Bold";
+  font-weight: 700;
+  font-display: swap;
+  src: url("../font/Roboto/Roboto-Bold.ttf");
+}
+@font-face {
   font-family: "Rubik Medium";
   font-weight: 500;
   font-display: swap;
@@ -1831,6 +1837,99 @@ body {
   }
   .highlight__row__card__content__header h3 {
     font-size: var(--fs-300);
+  }
+}
+
+.highlight_categories {
+  position: relative;
+  min-height: 72rem;
+}
+.highlight_categories::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: rgba(63, 63, 63, 0.5);
+  z-index: 1;
+}
+.highlight_categories__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+.highlight_categories__row {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  z-index: 2;
+}
+.highlight_categories__row__card {
+  flex-basis: 33.333%;
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-end;
+}
+.highlight_categories__row__card:not(:last-child) {
+  border-right: 4px solid rgba(255, 255, 255, 0.2);
+}
+.highlight_categories__row__card__content {
+  padding: var(--fs-1000);
+  width: 100%;
+  background: rgba(35, 40, 40, 0.5);
+  color: var(--clr-white-500);
+}
+.highlight_categories__row__card__content:hover {
+  cursor: pointer;
+}
+.highlight_categories__row__card__content__header p {
+  font-family: var(--bold) !important;
+  line-height: 1.1 !important;
+}
+.highlight_categories__row__card__content__header h3 {
+  color: var(--clr-white-500);
+}
+.highlight_categories__row__card__content__body {
+  display: none;
+}
+.highlight_categories__row__card--active .highlight_categories__row__card__content {
+  background: var(--clr-primary-500);
+}
+.highlight_categories__row__card--active .highlight_categories__row__card__content__body {
+  display: block;
+}
+@media only screen and (max-width: 1366px) {
+  .highlight_categories__row__card__content {
+    padding: var(--fs-1000) var(--fs-600);
+  }
+}
+@media only screen and (max-width: 768px) {
+  .highlight_categories__row__card__content {
+    padding: var(--fs-1000) var(--fs-400);
+  }
+}
+@media only screen and (max-width: 576px) {
+  .highlight_categories__row {
+    position: relative;
+    flex-flow: initial;
+    flex-direction: column;
+  }
+  .highlight_categories__row__card {
+    flex-basis: 100%;
+  }
+  .highlight_categories__row__card:not(:last-child) {
+    border-right: none;
+    border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+  }
+  .highlight_categories__row__card__content {
+    padding: var(--fs-1000) var(--fs-400);
   }
 }
 
