--- a/assets/sass/fonts/_font-face.scss
+++ b/assets/sass/fonts/_font-face.scss
@@ -6,6 +6,14 @@
     src: url("../font/Roboto/Roboto-Regular.ttf");
 }
 
+//Roboto Bold
+@font-face {
+    font-family: "Roboto Bold";
+    font-weight: 700;
+    font-display: swap;
+    src: url("../font/Roboto/Roboto-Bold.ttf");
+}
+
 //Rubik Medium
 @font-face {
     font-family: "Rubik Medium";
