conclusion about section

--- a/assets/sass/pages/home/_highlight-categories.scss
+++ b/assets/sass/pages/home/_highlight-categories.scss
@@ -119,7 +119,7 @@
         }
 
         &__content{
-          padding: var(--fs-1000) var(--fs-400);
+          padding: var(--fs-500);
         }
       }
     }
