--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1929,7 +1929,116 @@ body {
     border-bottom: 4px solid rgba(255, 255, 255, 0.2);
   }
   .highlight_categories__row__card__content {
-    padding: var(--fs-1000) var(--fs-400);
+    padding: var(--fs-500);
+  }
+}
+
+.about__row {
+  grid-template-columns: 35rem 1fr 25.5rem;
+}
+.about__row__content__highlight {
+  font-size: 2rem;
+}
+.about__row__image {
+  position: relative;
+}
+.about__row__image::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 21.5rem;
+  height: 40rem;
+  content: "";
+  background: var(--clr-primary-500);
+  z-index: 0;
+}
+.about__row__image__container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: calc(100% - 4.5rem);
+  height: calc(100% - 7.2rem);
+  z-index: 1;
+}
+.about__row__pillars {
+  display: flex;
+  flex-direction: column;
+  gap: var(--fs-400);
+}
+.about__row__pillars__card__header {
+  gap: var(--fs-100);
+}
+.about__row__pillars__card__header span {
+  width: 8px;
+  height: 8px;
+  background: var(--clr-primary-500);
+  border-radius: 50%;
+  line-height: 1.1 !important;
+}
+.about__row__pillars__card__header h3 {
+  font-size: 2rem;
+}
+.about__row__pillars__card__body {
+  padding-left: var(--fs-200);
+  font-size: 12px;
+  text-align: justify;
+}
+@media only screen and (max-width: 768px) {
+  .about__header h2 {
+    font-size: var(--fs-500);
+  }
+  .about__row {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .about__row__pillars {
+    padding-top: var(--fs-400);
+    grid-column: 1/-1;
+    flex-direction: row;
+    gap: calc(var(--gap) * 2);
+  }
+  .about__row__pillars__card {
+    flex-basis: 33.333%;
+  }
+  .about__row__pillars__card__body {
+    padding-left: 0;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .about__header p {
+    font-size: 2rem;
+  }
+  .about__header h2 {
+    font-size: var(--fs-400);
+  }
+  .about__row {
+    grid-template-columns: 1fr;
+    gap: calc(var(--gap) * 3);
+  }
+  .about__row__image {
+    width: 100%;
+    height: 32rem;
+    order: -1;
+  }
+  .about__row__image::after {
+    width: calc(100% - 4.5rem);
+    height: calc(100% - 4.5rem);
+  }
+  .about__row__image__container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: calc(100% - 4.5rem);
+    height: calc(100% - 4.5rem);
+    z-index: 1;
+  }
+  .about__row__pillars {
+    padding-top: 0;
+    flex-wrap: wrap;
+  }
+  .about__row__pillars__card {
+    padding: var(--fs-300);
+    flex-basis: 100%;
+    background: var(--clr-light-gray-500);
   }
 }
 
