--- a/assets/font/icon/variables.scss
+++ b/assets/font/icon/variables.scss
@@ -1,6 +1,8 @@
 $icomoon-font-family: "icon" !default;
 $icomoon-font-path: "fonts" !default;
 
+$icon-others: "\e90b";
+$icon-spinner: "\e911";
 $icon-arrow-downward: "\e900";
 $icon-arrow-forward: "\e901";
 $icon-arrow-right: "\e902";
@@ -12,7 +14,6 @@ $icon-html: "\e907";
 $icon-instagram: "\e908";
 $icon-linkedin: "\e909";
 $icon-mail: "\e90a";
-$icon-others: "\e90b";
 $icon-phone: "\e90c";
 $icon-safety: "\e90d";
 $icon-search: "\e90e";
