--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -92,12 +92,11 @@ textarea {
   height: 100%;
   padding: var(--fs-200);
   font-family: var(--regular) !important;
-  color: var(--clr-gray-500) !important;
+  color: var(--clr-neutral-500) !important;
   line-height: 1.5;
   border: none;
-  border-bottom: 2px solid var(--clr-gray-500);
   border-radius: 0;
-  background: none;
+  background: #F4F4F4;
   transform: scale(1);
   -webkit-appearance: none !important;
   -webkit-border-radius: 0 !important;
@@ -117,42 +116,26 @@ textarea {
 
   &::-moz-placeholder {
     font: {
-      family: var(--t-medium);
-      size: var(--fs-200) !important;
+      size: 1.4rem !important;
     }
-    text-transform: uppercase;
-
-    color: var(--clr-gray-500);
   }
 
   &:-ms-input-placeholder {
     font: {
-      family: var(--t-medium);
-      size: var(--fs-200) !important;
+      size: 1.4rem !important;
     }
-    text-transform: uppercase;
-
-    color: var(--clr-gray-500);
   }
 
   &::-ms-input-placeholder {
     font: {
-      family: var(--t-medium);
-      size: var(--fs-200) !important;
+      size: 1.4rem !important;
     }
-    text-transform: uppercase;
-
-    color: var(--clr-gray-500);
   }
 
   &::placeholder {
     font: {
-      family: var(--t-medium);
-      size: var(--fs-200) !important;
+      size: 1.4rem !important;
     }
-    text-transform: uppercase;
-
-    color: var(--clr-gray-500);
   }
 
   &:focus {
@@ -167,7 +150,7 @@ textarea {
 }
 
 textarea {
-  min-height: 15rem;
+  height: 15rem;
   resize: none;
 }
 
