--- a/assets/font/icon/style.css
+++ b/assets/font/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icon';
-  src:  url('fonts/icon.eot?ft4vz1');
-  src:  url('fonts/icon.eot?ft4vz1#iefix') format('embedded-opentype'),
-    url('fonts/icon.ttf?ft4vz1') format('truetype'),
-    url('fonts/icon.woff?ft4vz1') format('woff'),
-    url('fonts/icon.svg?ft4vz1#icon') format('svg');
+  src:  url('fonts/icon.eot?e34hvc');
+  src:  url('fonts/icon.eot?e34hvc#iefix') format('embedded-opentype'),
+    url('fonts/icon.ttf?e34hvc') format('truetype'),
+    url('fonts/icon.woff?e34hvc') format('woff'),
+    url('fonts/icon.svg?e34hvc#icon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-others:before {
+  content: "\e90b";
+}
+.icon-spinner:before {
+  content: "\e911";
+}
 .icon-arrow-downward:before {
   content: "\e900";
 }
@@ -57,9 +63,6 @@ i {
 }
 .icon-mail:before {
   content: "\e90a";
-}
-.icon-others:before {
-  content: "\e90b";
 }
 .icon-phone:before {
   content: "\e90c";
