--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -59,6 +59,22 @@
                     @include transition(all);
                 }
             }
+        }@else if $color == dark-gray{
+            .btn-#{$color}-#{$prop} {
+                background-color: $value;
+                color: var(--clr-white-500);
+                border-color: $value;
+                @include transition(all);
+
+                &:hover {
+                    color: var(--clr-white-500);
+                    //background-color: lighten($value, 10%);
+                    //border-color: lighten($value, 10%);
+                    background-color: var(--clr-primary-500);
+                    border-color: var(--clr-primary-500);
+                    @include transition(all);
+                }
+            }
         }@else {
             .btn-#{$color}-#{$prop} {
                 background-color: $value;
