--- a/assets/sass/utilities/_display.scss
+++ b/assets/sass/utilities/_display.scss
@@ -4,7 +4,7 @@
   display: none !important;
 }
 
-.p-fixed {
+.d-fixed {
   position: -webkit-sticky !important;
   position: sticky !important;
   top: 0;
