--- a/assets/sass/components/_pagination.scss
+++ b/assets/sass/components/_pagination.scss
@@ -9,6 +9,9 @@
     flex-direction: row;
 
     &__item{
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 4rem;
       height: 4rem;
       font-size: var(--fs-200) !important;
