--- a/assets/sass/pages/pages/_index.scss
+++ b/assets/sass/pages/pages/_index.scss
@@ -1,2 +1,6 @@
 @forward "contact/map";
 @forward "contact/content";
+@forward "products/hero";
+@forward "products/content";
+@forward "products/categories";
+@forward "products/sidebar";
